[package]
name = "itit-work"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1