[package]
name = "itit-work"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8.19"
md5 = "0.7.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
image = "0.25.2"

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = 'z'
codegen-units = 1